[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/RegularWhite.fnt" type="BitmapFont" id=1]
[ext_resource path="res://Fonts/MicroWhite.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Domino/TextBoxTheme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/RegularRed.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Fonts/RegularGreen.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Domino/TextBoxWhiteTheme.tres" type="Theme" id=6]
[ext_resource path="res://Battlers/Player/PlayerBust.tscn" type="PackedScene" id=7]
[ext_resource path="res://Equipment/Status.gd" type="Script" id=8]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 4

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="Node2D"]
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
color = Color( 0.494118, 0.145098, 0.145098, 1 )

[node name="ExitButton" type="Button" parent="Node2D"]
margin_left = 888.0
margin_top = 12.0
margin_right = 939.0
margin_bottom = 48.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="EquipButton" type="Button" parent="Node2D"]
margin_left = 316.0
margin_top = 96.0
margin_right = 404.0
margin_bottom = 126.0
rect_min_size = Vector2( 88, 30 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Unequip"

[node name="Title" type="Label" parent="Node2D"]
margin_top = 40.0
margin_right = 960.0
margin_bottom = 88.0
mouse_filter = 1
custom_fonts/font = ExtResource( 1 )
text = "Player"
align = 1

[node name="EquipmentLabel" type="Label" parent="Node2D"]
margin_left = 40.0
margin_top = 100.0
margin_right = 400.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 5 )
text = "Equipment"
align = 1

[node name="InfoBackground" type="ColorRect" parent="Node2D"]
margin_left = 36.0
margin_top = 473.0
margin_right = 404.0
margin_bottom = 527.0
color = Color( 0, 0, 0, 1 )

[node name="EquipmentBackground" type="ColorRect" parent="Node2D"]
margin_left = 36.0
margin_top = 136.0
margin_right = 404.0
margin_bottom = 464.0
mouse_filter = 1

[node name="Information" type="Label" parent="Node2D"]
margin_left = 40.0
margin_top = 476.0
margin_right = 396.0
margin_bottom = 524.0
rect_min_size = Vector2( 356, 48 )
custom_fonts/font = ExtResource( 2 )
align = 1
autowrap = true

[node name="GridContainer" type="GridContainer" parent="Node2D"]
margin_left = 40.0
margin_top = 140.0
margin_right = 400.0
margin_bottom = 460.0
mouse_filter = 2
columns = 9

[node name="PlayerSprite" parent="Node2D" instance=ExtResource( 7 )]
frame = 3

[node name="GemsText" type="RichTextLabel" parent="Node2D"]
margin_left = 12.0
margin_top = 12.0
margin_right = 52.0
margin_bottom = 52.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Gems"
text = "Gems"

[node name="CharacterStats" type="Label" parent="Node2D"]
margin_left = 726.0
margin_top = 97.0
margin_right = 937.0
margin_bottom = 205.0
custom_fonts/font = ExtResource( 2 )
text = "Stats"
align = 2

[connection signal="pressed" from="Node2D/ExitButton" to="Node2D" method="_on_Button_pressed"]
[connection signal="pressed" from="Node2D/EquipButton" to="Node2D" method="_on_EquipButton_pressed"]
